syntax = "proto2";

package operation;

option java_package = "buffers";
option java_outer_classname = "ResponseProtos";


// A response from the server can be any of these types 
// More detailed description can be found in PROTOCOL.md
message Response {
  enum ResponseType {
    GREETING = 0;     
    LEADERBOARD = 1;  
    START = 2;   
    PLAY = 3;         
    DONE = 4;          
    ERROR = 5;
    BYE = 6;
  }

  enum EvalType {
    HIT = 0;    // guess was a hit
    MISS = 1;   // guess was a miss
    OLD = 2;    // guess was already done
    WON = 3;    // guess finished finding all ships
    LOST = 4;   // guess did not finish the game and player lost
  }

  enum NextStep {
    MENU = 0;  // server expects menu option next so START, LEADERBOARD or QUIT request
    TILE = 1;  // server expects TILE next
  }

  optional ResponseType responseType = 1 [default = GREETING];


  // Possible fields, see PROTOCOL.md for details
  optional NextStep next = 2; // what the server expects nexts

  optional string menuoptions = 3; // the menu send to the client

  repeated Entry leader = 4; // leaderboard

  optional string board = 5;  // game board 
  optional EvalType eval = 6; // if hit/miss/old

  optional string message = 7; // error or other messages
  optional int32 points = 8; // points
  
}


// entry for the leader board
message Entry {
	optional string name = 1;         // name of user
	optional int32 points = 2;        // how many points player has
	optional int32 logins = 3;        // how many logins
}